Ensure alignment helpers adjust properly for mobile.

--- a/scss/base/_helpers.scss
+++ b/scss/base/_helpers.scss
@@ -24,14 +24,30 @@ HELPERS
 
 .alignleft {
   display: inline;
+  max-width: 50%;
   float: left;
-  margin-right: 1.5em;
+  margin: 0 20px 20px 0;
+
+  @include mobile_landscape {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 0 20px 0;
+  }
 }
 
 .alignright {
   display: inline;
+  max-width: 50%;
   float: right;
-  margin-left: 1.5em;
+  margin: 0 0 20px 20px;
+
+  @include mobile_landscape {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    margin: 0 0 20px 0;
+  }
 }
 
 .aligncenter {
